plugins {
    id 'java'
    id 'application'
    id 'maven-publish'
}

group = 'cn.moerain'
version = '1.0-BETA-2'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    tasks.withType(ProcessResources) {
        filteringCharset = 'UTF-8'
    }
}

application {
    mainClass = 'cn.moerain.visualmidi.Main'
    // Ensure JVM internal package access for SF2 soundbank on Java 17+
    applicationDefaultJvmArgs = ['--add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED', '-Dfile.encoding=UTF-8']
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

run {
    // Allow access to internal com.sun.media.sound for SF2 loading in some JDKs
    jvmArgs += ['--add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED', '-Dfile.encoding=UTF-8']
}

test {
    useJUnitPlatform()
}
jar {
    manifest {
        attributes(
            'Main-Class': 'cn.moerain.visualmidi.Main'
        )
    }
}
